# ZeroDB

./: .gitignore  .repl_history  README.md
aqua/: .gitignore  package-lock.json  package.json  tsconfig.json
aqua/aqua/: fdb.aqua  zero_db.aqua
artifacts/: zero_db.wasm
service/: .gitignore  .repl_history  Cargo.toml  Config.toml  build.sh
service/artifacts/: zero_db.wasm
service/src/: db.rs  ed25519.rs  ipfs.rs  main.rs  result.rs
services/: Cargo.toml  Config.toml  build.sh  deploy.json
services/artifacts/: fdb_data.wasm  fdb_dht.wasm  fdb_ed25519.wasm  fdb_facade.wasm  fdb_ipfs.wasm
services/configs/: deploy-cfg.json
services/data/: Cargo.toml
services/data/src/: formatter.rs  main.rs
services/dht/: Cargo.toml
services/dht/src/: dht.rs  main.rs  record.rs
services/ed25519/: Cargo.toml
services/ed25519/src/: ed25519.rs  main.rs
services/facade/: Cargo.toml
services/facade/src/: auth.rs  main.rs
services/ipfs/: Cargo.toml
services/ipfs/src/: ipfs.rs  main.rs
services/scripts/: deploy.sh
services/types/: Cargo.toml
services/types/src/: block.rs  get.rs  lib.rs  put.rs  result.rs  retrieval.rs  schema.rs
src/: db.rs  main.rs  result.rs
