[package]
name = "fdb_ipfs"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["FDB Labs"]

[[bin]]
name = "fdb_ipfs"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = { version = "0.7.1", features = ["logger"] }
multiaddr = { version = "0.11.2", package = "fluence-fork-parity-multiaddr" }
log = "0.4.14"
eyre = "0.6.5"
serde_json = "1.0.64"

types = { path = "../types" }